# musl

./: README.md  pyproject.toml
models/: __init__.py  base.py
resources/: unit_total_eval_cases.jsonl
scripts/: build_sft.sh  eval_pass_k.sh
trans/: backtrans.py  dataset.py  train.py  vllm_predict.py  vllm_predict_ut.py
trans/LLaMA-Factory/: README.md
trans/LLaMA-Factory/src/llamafactory/train/sft/: metric.py
trans/evaluation/: metrics.py
trans/evaluation/bleu/: bleu.py  requirements.txt
trans/utils/: config.py  data_filter.py  io.py  prompts.py  template.py  timer.py
unit_test/: babel_test_dataset_unitest.py  babel_test_dataset_unitest_cuda.py  build_dataset.py  compile_filter.py  compiler.py  configs.py  convertor.py  eval.py  eval_cov.py  eval_passk.py  generator.py  prompts.py  schemas.py  templates.py  valid_translations.jsonl  validator.py
unit_test/utils/: common_utils.py  json_utils.py  parse_gcov.py  unittest_res_consistant_utils.py
